Fixed some errors and comments given by PMD and checkstyle.